	PR gas/15178 	* config/tc-sparc.h (ELF_TARGET_FORMAT): Set to elf32-sparc for 	FreeBSD targets.